--- a/modules/stochastic_tools/doc/content/bib/stochastic_tools.bib
+++ b/modules/stochastic_tools/doc/content/bib/stochastic_tools.bib
@@ -1,3 +1,27 @@
+@article{li2016pss,
+  title={Matlab codes of Subset Simulation for reliability analysis and structural optimization},
+  author={Li, H. S. and Cao, Z. J.},
+  journal={Structural and Multidisciplinary Optimization},
+  volume={54},
+  number={2},
+  pages={391--410},
+  year={2016},
+  publisher={Springer},
+  url={https://doi.org/10.1007/s00158-016-1414-5}
+}
+
+@article{au2001pss,
+  title={Estimation of small failure probabilities in high dimensions by subset simulation},
+  author={Au, S. K. and Beck, J. L.},
+  journal={Probabilistic engineering mechanics},
+  volume={16},
+  number={4},
+  pages={263--277},
+  year={2001},
+  publisher={Elsevier},
+  url={https://doi.org/10.1016/S0266-8920(01)00019-4}
+}
+
 @article{au1999new,
   title={A new adaptive importance sampling scheme for reliability calculations},
   author={Au, S. K. and Beck, J. L.},
